PROTON-1993: [Windows] Fix use of CompletionKeys in IOCP proactor - Turned these from an obscure (and error prone) process unique key   to a simple enum which is just as good here.